--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>CryptoLens by Ade</h1>
+    <h1>CryptoLens</h1>
     <select id="coin-select">
       <option value="BTC">Bitcoin (BTC)</option>
       <option value="ETH">Ethereum (ETH)</option>
