--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -253,7 +253,7 @@
             <img src="https://whale-alert.io/static/logo.png" alt="Whale Alert Logo">
         </a>
         <a href="https://www.coingecko.com/" target="_blank" rel="noopener noreferrer" title="CoinGecko">
-            <img src="https://static.coingecko.com/s/coingecko-logo-8903d34ce19ca4be1c81f0db30b924bf0eb4ca038b012e5d5cef763b6393b22f.png" alt="CoinGecko Logo">
+            <img src="https://static.coingecko.com/s/coingecko-logo-5683263fd3ea8a4f152dd5f7299acfc5f84ee73955428acff22913b8e59e6c54.svg" alt="CoinGecko Logo">
         </a>
     </div>
 </footer>
