--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -244,7 +244,7 @@
             <img src="https://alternative.me/images/alternative-me-logo.png" alt="Alternative.me Logo">
         </a>
         <a href="https://cryptoquant.com/" target="_blank" rel="noopener noreferrer" title="CryptoQuant">
-            <img src="https://static.cryptoquant.com/production/cq-logo.c810c88.svg" alt="CryptoQuant Logo">
+            <img src="https://pstatic.cryptoquant.com/logo/cryptoquant_logo_dark.svg" alt="CryptoQuant Logo">
         </a>
         <a href="https://www.coinglass.com/" target="_blank" rel="noopener noreferrer" title="Coinglass">
             <img src="https://www.coinglass.com/favicon.ico" onerror="this.src='https://www.coinglass.com/images/logo.png'" alt="Coinglass Logo">
