--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -250,7 +250,7 @@
             <img src="https://www.coinglass.com/favicon.ico" onerror="this.src='https://www.coinglass.com/images/logo.png'" alt="Coinglass Logo">
         </a>
         <a href="https://whale-alert.io/" target="_blank" rel="noopener noreferrer" title="Whale Alert">
-            <img src="https://whale-alert.io/static/logo.png" alt="Whale Alert Logo">
+            <img src="https://whale-alert.io/assets/images/logo_whale-alert.png" alt="Whale Alert Logo">
         </a>
         <a href="https://www.coingecko.com/" target="_blank" rel="noopener noreferrer" title="CoinGecko">
             <img src="https://static.coingecko.com/s/coingecko-logo-5683263fd3ea8a4f152dd5f7299acfc5f84ee73955428acff22913b8e59e6c54.svg" alt="CoinGecko Logo">
