--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -238,16 +238,13 @@
             <img src="https://s2.coinmarketcap.com/static/cloud/img/coinmarketcap_1.svg" alt="CoinMarketCap Logo">
         </a>
         <a href="https://www.tradingview.com/" target="_blank" rel="noopener noreferrer" title="TradingView">
-            <img src="https://s3.tradingview.com/tv.js/static/images/logo.svg" alt="TradingView Logo">
+            <img src="https://ademiando.com/assets/tradingview.png" alt="TradingView Logo">
         </a>
         <a href="https://alternative.me/" target="_blank" rel="noopener noreferrer" title="Alternative.me">
             <img src="https://alternative.me/images/alternative-me-logo.png" alt="Alternative.me Logo">
         </a>
         <a href="https://cryptoquant.com/" target="_blank" rel="noopener noreferrer" title="CryptoQuant">
             <img src="https://pstatic.cryptoquant.com/logo/cryptoquant_logo_dark.svg" alt="CryptoQuant Logo">
-        </a>
-        <a href="https://www.coinglass.com/" target="_blank" rel="noopener noreferrer" title="Coinglass">
-            <img src="https://www.coinglass.com/favicon.ico" onerror="this.src='https://www.coinglass.com/images/logo.png'" alt="Coinglass Logo">
         </a>
         <a href="https://whale-alert.io/" target="_blank" rel="noopener noreferrer" title="Whale Alert">
             <img src="https://whale-alert.io/assets/images/logo_whale-alert.png" alt="Whale Alert Logo">
