--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -247,7 +247,7 @@
             <img src="https://pstatic.cryptoquant.com/logo/cryptoquant_logo_dark.svg" alt="CryptoQuant Logo">
         </a>
         <a href="https://whale-alert.io/" target="_blank" rel="noopener noreferrer" title="Whale Alert">
-            <img src="https://whale-alert.io/assets/images/logo_whale-alert.png" alt="Whale Alert Logo">
+            <img src="https://ademiando.com/assets/whale-alert.png" alt="Whale Alert Logo">
         </a>
         <a href="https://www.coingecko.com/" target="_blank" rel="noopener noreferrer" title="CoinGecko">
             <img src="https://static.coingecko.com/s/coingecko-logo-5683263fd3ea8a4f152dd5f7299acfc5f84ee73955428acff22913b8e59e6c54.svg" alt="CoinGecko Logo">
