--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitcoin Live Analysis Dashboard</title>
+    <title>Bitcoin matrix | Live Analysis Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -17,7 +17,7 @@
                     <i class="fab fa-bitcoin"></i>
                 </div>
                 <div class="brand-text">
-                    <h1>Bitcoin Live Dashboard</h1>
+                    <h1>Bitcoin Matrix</h1>
                     <p>Real-time market analysis & metrics</p>
                 </div>
             </div>
@@ -64,7 +64,7 @@
             <div class="main-panel">
                 <div class="card">
                     <div class="card-header">
-                        <h2 class="card-title"><i class="fas fa-chart-line"></i> BTC/USD Price Chart</h2>
+                        <h2 class="card-title"><i class="fas fa-chart-line"></i>Price Chart</h2>
                         <div class="chart-actions">
                             <button class="btn" data-interval="60">1H</button>
                             <button class="btn" data-interval="240">4H</button>
