--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -86,7 +86,16 @@
                     <div class="card-header">
                         <h2 class="card-title"><i class="fas fa-brain"></i> Market Sentiment</h2>
                         <div class="chart-actions">
-                            <button class="btn" id="refresh-sentiment"><i class="fas fa-sync-alt"></i> Refresh</button>
+                           <!-- <button class="btn" id="refresh-sentiment"><i class="fas fa-sync-alt"></i> Refresh</button> -->
+
+
+
+
+
+
+<button class="btn" onclick="window.location.href='/'">
+  <i class="fas fa-sync-alt"></i> Refresh
+</button>
                         </div>
                     </div>
                     <div class="sentiment-container">
