--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -93,7 +93,7 @@
 
 
 
-<button class="btn" onclick="window.location.href='/'">
+<button class="btn" onclick="window.location.href='/cryptolens/'">
   <i class="fas fa-sync-alt"></i> Refresh
 </button>
                         </div>
