--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
           <img src="https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Online Catalog">
         </div>
         <div class="card-body">
-          <h3>Online Catalog – Ornamental Plant Shop</h3>
-          <p>Product catalog with filters and interactive gallery</p>
+          <h3>Bitcoin Matrix – Crypto Lens</h3>
+          <p>Real-time Bitcoin market analysis & metrics</p>
         </div>
         <div class="card-footer">
-          <a href="https://ademiando.github.io/portfolio3" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
+          <a href="https://ademiando.github.io/cryptolens" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
       
