--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <p>Real-time Bitcoin market analysis & metrics</p>
         </div>
         <div class="card-footer">
-          <a href="https://ademiando.github.io/cryptolens" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
+          <a href="https://ademiando.com/cryptolens" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
       
