--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
-
 </head>
 <body>
     <div class="container">
@@ -266,7 +265,7 @@
 
     </div>
 
-       <script src="realtime.js"></script> 
+       <script src="cryptolens.js"></script> 
 
 </body>
 </html>
