--- a/cryptolens/index.html
+++ b/cryptolens/index.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
+
+<div id="error-container" style="display: none; background: #ffebee; color: #b71c1c; padding: 15px; border-radius: 4px; margin: 10px 0;"></div>
+
     <div class="container">
         <header>
             <div class="brand">
