--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -6,6 +6,8 @@
     <title>Bitcoin matrix | Live Analysis Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style/labeldata.css">
+    <link rel="stylesheet" href="/style/icon.css">
 
 </head>
 <body>
