--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -321,7 +321,17 @@
 
     </div>
 
-    <script src="realtime.js"></script> 
+    <script src="js/main.js" type="module"></script>
+    <script src="js/chart.js" type="module"></script>
+    <script src="js/orderbook.js" type="module"></script>
+    <script src="js/liquiditypool.js" type="module"></script>
+    <script src="js/marketdata.js" type="module"></script>
+    <script src="js/sentiment.js" type="module"></script>
+    <script src="js/whale.js" type="module"></script>
+    <script src="js/derivatives.js" type="module"></script>
+    <script src="js/onchain.js" type="module"></script>
+    <script src="js/altseason.js" type="module"></script>
+
 
 </body>
 </html>
