--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -321,16 +321,16 @@
 
     </div>
 
-    <script src="js/main.js" type="module"></script>
-    <script src="js/chart.js" type="module"></script>
-    <script src="js/orderbook.js" type="module"></script>
-    <script src="js/liquiditypool.js" type="module"></script>
-    <script src="js/marketdata.js" type="module"></script>
-    <script src="js/sentiment.js" type="module"></script>
-    <script src="js/whale.js" type="module"></script>
-    <script src="js/derivatives.js" type="module"></script>
-    <script src="js/onchain.js" type="module"></script>
-    <script src="js/altseason.js" type="module"></script>
+    <script src="js/btcmatrix/main.js" type="module"></script>
+    <script src="js/btcmatrix/chart.js" type="module"></script>
+    <script src="js/btcmatrix/orderbook.js" type="module"></script>
+    <script src="js/btcmatrix/liquiditypool.js" type="module"></script>
+    <script src="js/btcmatrix/marketdata.js" type="module"></script>
+    <script src="js/btcmatrix/sentiment.js" type="module"></script>
+    <script src="js/btcmatrix/whale.js" type="module"></script>
+    <script src="js/btcmatrix/derivatives.js" type="module"></script>
+    <script src="js/btcmatrix/onchain.js" type="module"></script>
+    <script src="js/btcmatrix/altseason.js" type="module"></script>
 
 
 </body>
