--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -322,15 +322,15 @@
     </div>
 
     <script src="js/btcmatrix/main.js" type="module"></script>
-    <script src="js/btcmatrix/chart.js" type="module"></script>
-    <script src="js/btcmatrix/orderbook.js" type="module"></script>
-    <script src="js/btcmatrix/liquiditypool.js" type="module"></script>
-    <script src="js/btcmatrix/marketdata.js" type="module"></script>
-    <script src="js/btcmatrix/sentiment.js" type="module"></script>
-    <script src="js/btcmatrix/whale.js" type="module"></script>
-    <script src="js/btcmatrix/derivatives.js" type="module"></script>
-    <script src="js/btcmatrix/onchain.js" type="module"></script>
-    <script src="js/btcmatrix/altseason.js" type="module"></script>
+    <script src="js/btcmatrix/js/chart.js" type="module"></script>
+    <script src="js/btcmatrix/js/orderbook.js" type="module"></script>
+    <script src="js/btcmatrix/js/liquiditypool.js" type="module"></script>
+    <script src="js/btcmatrix/js/marketdata.js" type="module"></script>
+    <script src="js/btcmatrix/js/sentiment.js" type="module"></script>
+    <script src="js/btcmatrix/js/whale.js" type="module"></script>
+    <script src="js/btcmatrix/js/derivatives.js" type="module"></script>
+    <script src="js/btcmatrix/js/onchain.js" type="module"></script>
+    <script src="js/btcmatrix/js/altseason.js" type="module"></script>
 
 
 </body>
