--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -333,7 +333,7 @@
     <script src="js/altseason.js" type="module"></script>
 -->
 
-  <script src="script.js"></script>
+  <script src="realtime.js"></script>
 
 </body>
 </html>
