--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -321,17 +321,16 @@
 
     </div>
 
-    <script src="js/main.js" type="module"></script>
-    <script src="js/chart.js" type="module"></script>
-    <script src="js/orderbook.js" type="module"></script>
-    <script src="js/liquiditypool.js" type="module"></script>
-    <script src="js/marketdata.js" type="module"></script>
-    <script src="js/sentiment.js" type="module"></script>
-    <script src="js/whale.js" type="module"></script>
-    <script src="js/derivatives.js" type="module"></script>
-    <script src="js/onchain.js" type="module"></script>
-    <script src="js/altseason.js" type="module"></script>
-
+<script type="module" src="https://ademiando.com/btcmatrix/js/main.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/chart.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/orderbook.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/liquiditypool.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/marketdata.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/sentiment.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/whale.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/derivatives.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/onchain.js"></script>
+<script type="module" src="https://ademiando.com/btcmatrix/js/altseason.js"></script>
 
 </body>
 </html>
