--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -320,7 +320,7 @@
 </footer>
 
     </div>
-
+<script type="module" src="https://ademiando.com/btcmatrix/js/proxy.js"></script>
 <script type="module" src="https://ademiando.com/btcmatrix/js/main.js"></script>
 <script type="module" src="https://ademiando.com/btcmatrix/js/chart.js"></script>
 <script type="module" src="https://ademiando.com/btcmatrix/js/orderbook.js"></script>
