--- a/btcmatrix/index.html
+++ b/btcmatrix/index.html
@@ -320,6 +320,10 @@
 </footer>
 
     </div>
+
+<script src="realtime.js"></script>
+
+<!--
 <script type="module" src="https://ademiando.com/btcmatrix/js/proxy.js"></script>
 <script type="module" src="https://ademiando.com/btcmatrix/js/main.js"></script>
 <script type="module" src="https://ademiando.com/btcmatrix/js/chart.js"></script>
@@ -331,6 +335,8 @@
 <script type="module" src="https://ademiando.com/btcmatrix/js/derivatives.js"></script>
 <script type="module" src="https://ademiando.com/btcmatrix/js/onchain.js"></script>
 <script type="module" src="https://ademiando.com/btcmatrix/js/altseason.js"></script>
+-->
+
 
 </body>
 </html>
