--- a/portofolio2/index.html
+++ b/portofolio2/index.html
@@ -576,5 +576,8 @@
 
     <script src="script.js"></script>
     <script src="portfolio.js"></script>
+    <script src="scrollanimation.js"></script>
+    
+    
 </body>
 </html>
