--- a/portofolio2/index.html
+++ b/portofolio2/index.html
@@ -140,19 +140,28 @@
 
 
 
-                    <div class="bg-dark-800 p-4 md:p-6 rounded-lg border border-dark-700">
-                        <h3 class="text-xl font-semibold mb-4 flex items-center">
-                            <i data-lucide="github" class="mr-2 text-primary-500"></i>
-                            Open Source Framework
-                        </h3>
-                        <p class="mb-4">
-                            Seluruh metodologi dan framework analisis tersedia secara publik di repositori GitHub:
-                        </p>
-                        <a href="#" class="inline-flex items-center text-primary-500 hover:text-primary-400 transition">
-                            github.com/ademiando/capital-growth-framework
-                            <i data-lucide="arrow-up-right" class="ml-1 text-sm"></i>
-                        </a>
-                    </div>
+
+
+
+        
+
+
+        <div class="flex justify-center">
+    <div class="bg-dark-800 p-4 md:p-6 rounded-lg border border-dark-700">
+        <h3 class="text-xl font-semibold mb-4 flex items-center">
+            <i data-lucide="github" class="mr-2 text-primary-500"></i>
+            Open Source Framework
+        </h3>
+        <p class="mb-4">
+            Seluruh metodologi dan framework analisis tersedia secara publik di repositori GitHub:
+        </p>
+        <a href="#" class="inline-flex items-center text-primary-500 hover:text-primary-400 transition">
+            github.com/ademiando/capital-growth-framework
+            <i data-lucide="arrow-up-right" class="ml-1 text-sm"></i>
+        </a>
+    </div>
+</div>
+
 
 
 
