--- a/portofolio2/index.html
+++ b/portofolio2/index.html
@@ -286,7 +286,7 @@
                         </div>
                         <div class="text-gray-500 text-sm ml-auto">July 18, 2025</div>
                     </div>
-                    <h3 class="text-xl font-semibold mb-3">Kenapa Saya Tidak Menyebut Diri Saya Trader</h3>
+                    <h3 class="text-xl font-semibold mb-3">A Research-Driven Approach in Capital Management</h3>
                     <p class="text-gray-400 mb-4">
                         Eksplorasi filosofis tentang pendekatan berbasis riset dan pengelolaan modal yang berbeda dengan aktivitas trading spekulatif...
                     </p>
