--- a/portofolio2/index.html
+++ b/portofolio2/index.html
@@ -555,16 +555,16 @@
                 </div>
                 
                 <div class="flex space-x-6">
-                    <a href="#" class="text-gray-500 hover:text-gray-300 transition">
+                    <a href="https://ademiando.com/lab" class="text-gray-500 hover:text-gray-300 transition">
                         <i data-lucide="github"></i>
                     </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-300 transition">
+                    <a href="https://x.com/ademiando" class="text-gray-500 hover:text-gray-300 transition">
                         <i data-lucide="twitter"></i>
                     </a>
                     <a href="#" class="text-gray-500 hover:text-gray-300 transition">
                         <i data-lucide="linkedin"></i>
                     </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-300 transition">
+                    <a href="https://gmail.com/ademiandoo" class="text-gray-500 hover:text-gray-300 transition">
                         <i data-lucide="mail"></i>
                     </a>
                 </div>
