--- a/portofolio2/index.html
+++ b/portofolio2/index.html
@@ -575,7 +575,7 @@
                     © 2025 Ademiando Market Research & Capital Growth Lab
                 </p>
                 <p class="text-gray-500 text-sm mt-4 md:mt-0 italic">
-                    "Growth through transparency and rigorous research."
+                    "Big things are made of small things."
                 </p>
             </div>
         </div>
