--- a/portofolio2/index.html
+++ b/portofolio2/index.html
@@ -555,7 +555,7 @@
                 </div>
                 
                 <div class="flex space-x-6">
-                    <a href="https://ademiando.github.io/ademiando.com" class="text-gray-500 hover:text-gray-300 transition">
+                    <a href="https://ademiando.github.io" class="text-gray-500 hover:text-gray-300 transition">
                         <i data-lucide="github"></i>
                     </a>
                     <a href="https://x.com/ademiandoo" class="text-gray-500 hover:text-gray-300 transition">
