--- a/portofolio2/index.html
+++ b/portofolio2/index.html
@@ -582,6 +582,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="hamburger.js"></script>
     <script src="portfolio.js"></script>
     <script src="scrollanimation.js"></script>
     
