--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="portfolio-grid">
       <div class="portfolio-card glass-card">
         <div class="card-header">
-          <img src="assets/montamap.jpg" alt="Company Profile">
+          <img src="assets/montamap.png" alt="Company Profile">
         </div>
         <div class="card-body">
           <h3>Montamap - Interactive Hiking Platform</h3>
@@ -128,7 +128,7 @@
 
       <div class="portfolio-card glass-card">
         <div class="card-header">
-          <img src="assets/amsel.jpg" alt="Landing Page">
+          <img src="assets/amsel.png" alt="Landing Page">
         </div>
         <div class="card-body">
           <h3>Amsel Tenda – Professional Wedding Organizer</h3>
