--- a/index.html
+++ b/index.html
@@ -422,7 +422,6 @@
 </section>
 
 <style>
- /* CSS remains unchanged */
  .powered-by { padding: 1.5rem 1rem; text-align: center; background: rgba(255, 255, 255, 0.05); border-radius: 1rem; backdrop-filter: blur(16px); box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25), 0 0 20px rgba(78, 84, 200, 0.2); margin: 2rem auto; max-width: 1100px; border: 1px solid rgba(255, 255, 255, 0.12); position: relative; overflow: hidden; }
  .powered-logos { overflow: hidden; position: relative; padding: 0.5rem 0; } 
  .logos-track { display: flex; gap: 1.8rem; padding: 0.8rem 0; justify-content: flex-start; width: max-content; animation: scroll 120s linear infinite; }
@@ -446,7 +445,7 @@
       <div class="footer-brand">
         <div class="logo">
           <span class="logo-icon"><i class="fas fa-code"></i></span>
-          <span>ademiando.dev</span>
+          <span>ademiando.com</span>
         </div>
         <p>End-to-End Professional Website Solutions With Modular Architecture Supporting Unlimited Scalability & Long-Term Business Growth Flexibility.</p>
         <div class="social-links">
@@ -479,7 +478,7 @@
     </div>
     
     <div class="footer-bottom">
-      <p>Copyright &copy; 2025 ademiando. All rights reserved.</p>
+      <p>&copy; 2025 ademiando. All rights reserved.</p>
     </div>
   </footer>
 
