--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<title>Affordable, Modular, and Scalable Website Services Starting from Rp600,000 – Premium Quality! | ademiando.dev</title>
+<title>ademiando.com | Modular Web Development</title>
 
-<meta name="description" content="Need a professional website at an affordable price? Starting from Rp600,000, we create modular & scalable websites for your business, shop, and MSME. Fast, secure, and ready to grow!">
+<meta name="description" content="Build scalable, customizable websites with 100% code ownership. No vendor lock-in, no annual fees — just smart, modular architecture.">
 
 <meta name="robots" content="index, follow">
 
@@ -42,21 +42,10 @@
   <section id="hero" class="hero-section">
     <div class="hero-content">
 
-<h1 class="hero-title">End-to-End Modular Website Architecture Solutions</h1>
+<h1 class="hero-title">Modular Web Development</h1>
 <div class="hero-subtitle">
-  <p>Designed for small businesses to enterprises with modular architecture supporting unlimited scalability and long-term business growth.</p>
-  
-  <div class="tech-foundation">
-    Open Source Technology & 100% Code Ownership
-  </div>
-  
-  <ul class="freedom-list">
-    <li><i class="fas fa-pencil-alt"></i> Freedom to Customize & Develop Features</li>
-    <li><i class="fas fa-truck-moving"></i> Modular Structure & Full Scalability</li>
-    <li><i class="fas fa-unlock"></i> Full Control & Zero Vendor Lock-in</li>
-    <li><i class="fas fa-cubes"></i> Smooth Migration Between Platforms & Infrastructure</li>
-  </ul>
-</div>
+  <p>Build fast. Scale smarter. Own it all.</p>
+
 
 <div class="hero-cta">
         <a href="#paket" class="cta-btn">View Packages <i class="fas fa-arrow-down"></i></a>
@@ -76,13 +65,37 @@
     </div>
   </section>
 
+
+
   <!-- Portfolio Section -->
   <section id="portfolio" class="section portfolio-section">
     <div class="section-header">
-      <h2><i class="fas fa-globe-asia"></i> Professional Websites</h2>
-      <p>Pay once, the site becomes your asset completely - free from annual hosting fees, open source & developer friendly.
-        See our best works...</p>
+      <h2><i class="fas fa-globe-asia"></i> Modular Websites</h2>
+      <p>We design modular, open-source websites built for growth. From startups to enterprises, our architecture empowers you to launch quickly, scale efficiently, and maintain full ownership — without ongoing fees or vendor lock-in.</p>
     </div>
+
+
+  <div class="tech-foundation">
+    Why Its Work?
+  </div>
+  
+  <ul class="freedom-list">
+    <li><i class="fas fa-pencil-alt"></i> Freedom to Customize & Develop Features</li>
+    <li><i class="fas fa-truck-moving"></i> Modular Structure & Full Scalability</li>
+    <li><i class="fas fa-unlock"></i> Full Control & Zero Vendor Lock-in</li>
+    <li><i class="fas fa-cubes"></i> Smooth Migration Between Platforms & Infrastructure</li>
+  </ul>
+</div>
+
+
+
+
+
+
+
+<div class="tech-foundation">
+    Discover Our Projects
+  </div>
     
     <div class="portfolio-grid">
       <div class="portfolio-card glass-card">
