--- a/index.html
+++ b/index.html
@@ -463,6 +463,11 @@
     <div class="footer-bottom">
       <p>&copy; 2025 ademiando. All rights reserved.</p>
     </div>
+
+        <div class="scroll-top">
+          <i class="fas fa-arrow-up"></i>
+        </div>
+
   </footer>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
