--- a/index.html
+++ b/index.html
@@ -6,10 +6,57 @@
   <title>ademiando.com | Modular Web Development</title>
   <meta name="description" content="Build scalable, customizable websites with 100% code ownership. No vendor lock-in, no annual fees — just smart, modular architecture.">
   <meta name="robots" content="index, follow">
-  
+
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+
+  <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ademiando.com/">
+  <meta property="og:title" content="ademiando.com | Modular Web Development">
+  <meta property="og:description" content="Build scalable, customizable websites with 100% code ownership.">
+  <meta property="og:image" content="https://ademiando.com/assets/og-image.jpg">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://ademiando.com/">
+  <meta name="twitter:title" content="ademiando.com | Modular Web Development">
+  <meta name="twitter:description" content="Build scalable, customizable websites with 100% code ownership.">
+  <meta name="twitter:image" content="https://ademiando.com/assets/og-image.jpg">
+
+  <!-- Structured Data JSON-LD for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "ademiando.com",
+    "url": "https://ademiando.com/",
+    "description": "Build scalable, customizable websites with 100% code ownership.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Ademiando"
+    }
+  }
+  </script>
+
+  <!-- CSS & Icons -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
+
+
+
+
+
+
+
+
+
+
+
 
 <body>
   <div class="particles-container" id="particles-js"></div>
