--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="accordion-panel">
           <ul class="addon-list">
             <li><i class="fas fa-tools"></i> Basic <strong>Rp50 K</strong> (2 updates)</li>
-            <li><i class="fas fa-shield-alt"></i> Premium <strong>Rp150 K</strong> (up to 10 updates)</li>
+            <li><i class="fas fa-shield-alt"></i> Premium <strong>Rp150 K</strong> (up to 10x)</li>
             <li><i class="fas fa-rocket"></i> Super + SEO <strong>Rp300 K</strong> (full support)</li>
           </ul>
         </div>
